fixed contact form alignment and textsize

--- a/css/styles.css
+++ b/css/styles.css
@@ -275,9 +275,9 @@ transition: [transition-property] [transition-duration] [transition-timing-funct
 form {
   background-color: var(--dark-blue);
   color: var(--pale-blue);
-  margin: 10%;
-  margin-left: 20%;
-  margin-right: 20%;
+  margin-top: 5%;
+  margin-left: 30%;
+  margin-right: 30%;
   border-radius: 10%;
   box-sizing: border-box;
   resize: vertical;
@@ -286,7 +286,7 @@ form {
 
 label, input[type=submit] {
   font-family: var(--font-nav);
-  font-size: 20px;
+  font-size: 18px;
   background-color: var(--dark-blue);
   color: var(--pale-blue);
   margin: 2% !important;
@@ -308,6 +308,11 @@ textarea, input[type=standard-label], input[type=email], input[type=tel] {
   padding-bottom: 3%;
   border-radius: 5%;
 }
+.textarea-length {
+  text-align:center;
+  font-size: 18px;
+}
+
 .email {
   margin-top: 1%;
   padding-top: 1%;
@@ -550,7 +555,7 @@ body{
   animation-timing-function: ease;
 }
 .cloud-back {
-    animation: 40s cloud-move-reverse infinite alternate ease-in-out;
+  animation: 40s cloud-move-reverse infinite alternate ease-in-out;
 }
 
 
